Update: change call-to-action text for contact section to "Rendez-vous huelen"

--- a/src/locales/lb.json
+++ b/src/locales/lb.json
@@ -190,7 +190,7 @@
     "contact": {
         "title": "Kontaktéiert eis",
         "subtitle": "Huelt elo en Rendez-vous",
-        "cta": "Termin buchen",
+        "cta": "Rendez-vous huelen",
         "openingHours": {
             "title": "Ëffnungszäiten",
             "days": {
