shorten hero text

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -15,7 +15,7 @@
         "title": "Kinésithérapie",
         "titleSecondLine": "Luxemburg",
         "titleThirdLine": "Ingo Pauls",
-        "subtitle": "Unsere Praxis besteht seit 2005 und ist spezialisiert auf die Behandlung von orthopädischen, neurologischen, post-operativen und sportspezifischen Beschwerden. Mit modernen Therapieansätzen sowie Spezialtechniken wie Schwindeltherapie oder craniomandibulärer Dysfunktionstherapie begleiten wir Sie auf dem Weg in ein beschwerdefreies Leben. Wir sind durch stetige Fortbildungen auf dem neuesten Wissensstand, um Ihnen eine bestmögliche Behandlung zu ermöglichen.",
+        "subtitle": "Seit 2005 begleiten wir Sie mit moderner, spezialisierter Physiotherapie bei orthopädischen, neurologischen, post-operativen und sportbedingten Beschwerden – kompetent und auf dem neuesten Stand der Wissenschaft.",
         "cta": "Termin vereinbaren"
     },
     "team": {
