--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
         "title": "Physiotherapy",
         "titleSecondLine": "Luxembourg",
         "titleThirdLine": "Ingo Pauls",
-        "subtitle": "Our practice has been established since 2005 and specializes in treating orthopedic, neurological, post-operative and sports-specific complaints. Using modern therapeutic approaches as well as specialized techniques such as dizziness therapy or craniomandibular dysfunction therapy, we support you on your path to a life free of symptoms. Through continuous professional development, we stay up to date with the latest knowledge to provide you with the best possible treatment.",
+        "subtitle": "Since 2005, we have been supporting you with modern, specialized physiotherapy for orthopedic, neurological, post-operative and sports-related conditions – competent and always up to date with the latest scientific knowledge.",
         "cta": "Book an appointment"
     },
     "team": {
