--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -15,7 +15,7 @@
         "title": "Kinésithérapie",
         "titleSecondLine": "Luxembourg",
         "titleThirdLine": "Ingo Pauls",
-        "subtitle": "Notre cabinet existe depuis 2005 et est spécialisé dans le traitement des troubles orthopédiques, neurologiques, postopératoires et liés au sport. Grâce à des approches thérapeutiques modernes et à des techniques spécialisées telles que la thérapie des vertiges ou la thérapie des dysfonctions cranio-mandibulaires, nous vous accompagnons vers une vie sans douleurs.  Grâce à des formations continues, nous sommes à la pointe des connaissances afin de vous offrir le meilleur traitement possible.",
+        "subtitle": "Depuis 2005, nous vous accompagnons avec une kinésithérapie moderne et spécialisée pour les troubles orthopédiques, neurologiques, post-opératoires et liés au sport – avec compétence et selon les connaissances scientifiques les plus récentes.",
         "cta": "Prendre rendez-vous"
     },
     "team": {
