--- a/src/locales/lb.json
+++ b/src/locales/lb.json
@@ -15,7 +15,7 @@
         "title": "Kinésithérapie",
         "titleSecondLine": "Lëtzebuerg",
         "titleThirdLine": "Ingo Pauls",
-        "subtitle": "Eis Praxis besteet zanter 2005 an ass spezialiséiert op d’Behandlung vun orthopädeschen, neurologeschen, postoperativen a sportsspezifesche Doléancen. Mat moderne Therapieusätz souwéi Spezialtechniken wéi Schwindeltherapie oder Therapie bei kraniomandibulärer Dysfunktioun begleede mir Iech um Wee zu engem Liewen ouni Doléancen. Duerch kontinuéierlech Weiderbildungen si mir um neiste Stand vum Wëssen, fir Iech eng optimal méiglech Behandlung ze garantéieren.",
+        "subtitle": "Zënter 2005 begleede mir Iech mat moderner, spezialiséierter Physiotherapie bei orthopädeschen, neurologeschen, post-operativen an sportsbedéngte Doleancen – kompetent an um neiste Stand vun der Wëssenschaft.",
         "cta": "Rendez-vous huelen"
     },
     "team": {
