--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -30,16 +30,16 @@
                 "role": "Gérant & Kinésithérapeute",
                 "about": "Parcours professionnel et qualifications",
                 "bullets": [
-                    "Diplôme de kinésithérapeute obtenu à la « staatlich anerkannte Lehranstalt für Physiotherapie » à Wittlich (1996)",
-                    "Formation complète de coach sportif via « Inline Unternehmensberatung GmbH » à Dorsten",
-                    "Formation spécialisée inspirée du concept Bobath (1997) à Betzdorf",
-                    "Ouverture de son propre cabinet en 2005",
-                    "Thérapeute manuel (S.O.M.T.) à la « FIM Münster » (2000)",
-                    "Formation de thérapeute des fascias via « INOMT » à la « MFZ Hannover » (2016)",
-                    "Formation continue en thérapie d’entraînement médical (2018) à Bad Neuenahr",
-                    "Formation de thérapeute CMD (2020) via « FOMT » à la « MFZ Hannover »",
-                    "Formation continue en rééducation du cartilage (2023)",
-                    "Formation de thérapeute des vertiges et vestibulaire selon « IVRT » (2024) à Coblence"
+                    "Diplômé en kinésithérapie à la «staatlich anerkannten Lehranstalt für Physiotherapie » de Wittlich en 1996",
+                    "Formation complète d'entraîneur de fitness auprès de la société « Inline Unternehmensberatung GmbH » à Dorsten",
+                    "Formation continue basée sur le concept Bobath en 1997 à Betzdorf",
+                    "Ouverture du cabinet en 2005",
+                    "Thérapie manuelle selon O.M.T. à la « FIM Münster » en 2000",
+                    "Formation de thérapeute des fascias par l'« INOMT » à la « MFZ Hannover » en 2016",
+                    "Formation continue en thérapie médicale par l'entraînement en 2018 à Bad Neuenahr",
+                    "Formation de thérapeute CMD en 2020 par la « FOMT » à la « MFZ Hannover »",
+                    "Formation continue en rééducation du cartilage en 2023",
+                    "Formation de thérapeute spécialisé de vertiges et de troubles vestibulaires selon « IVRT » en 2024 à Coblence"
                 ]
             },
             "paul": {
@@ -47,12 +47,12 @@
                 "role": "Kinésithérapeute",
                 "about": "Parcours professionnel et qualifications",
                 "bullets": [
-                    "Diplôme de kinésithérapeute (« Master en kinésithérapie et réadaptation ») obtenu à l’« Université catholique de Louvain » (2013)",
-                    "Thérapeute manuel (S.O.M.T.) à l’« Université de Liège » (2017)",
-                    "Nombreuses formations continues en orthopédie et kinésithérapie du sport",
-                    "Formation complète en « dry needling » à la « David G Simmons Academy »",
-                    "Kinésithérapeute de l’équipe masculine de basketball BBC Etzella Ettelbruck",
-                    "Kinésithérapeute de l’équipe nationale masculine de basketball"
+                    "Diplômé en kinésithérapie (« Master en kinésithérapie et réadaptation ») de l’«Université catholique de Louvain » en 2013",
+                    "Thérapie manuelle selon O.M.T. à l’ «Université de Liège » en 2017",
+                    "Nombreuses formations continues dans le domaine de l'orthopédie et de la kinésithérapie du sport",
+                    "Formation complète en « dry needling » à la « David G Simmons Academy »",
+                    "Kinésithérapeute de l'équipe masculine de basket-ball BBC Etzella Ettelbruck",
+                    "Kinésithérapeute de l'équipe nationale masculine de basket-ball"
                 ]
             },
             "birgit": {
@@ -60,11 +60,11 @@
                 "role": "Kinésithérapeute",
                 "about": "Parcours professionnel et qualifications",
                 "bullets": [
-                    "Diplôme de kinésithérapeute obtenu à la « staatliche Schule für Physiotherapie Grünstadt » (1988)",
-                    "Formation « drainage lymphatique manuel / thérapie décongestive complexe » via « Lymphologic GmbH Deutschland »",
-                    "Formations continues, notamment en pédagogie du mouvement selon Klein-Vogelbach et en travail corporel thérapeutique selon Feldenkrais",
-                    "Formation continue en traitement des cicatrices à l’aide de la réflexologie plantaire",
-                    "De nombreuses années d’expérience auprès de personnes présentant des limitations physiques et intellectuelles"
+                    "Diplômé en kinésithérapie à la »staatlichen Schule für Physiotherapie Grünstadt« en 1988",
+                    "Formation en « drainage lymphatique manuel/thérapie décongestive complexe » auprès de la société « Lymphologic GmbH Deutschland »",
+                    "Formation continue entre autres en kinésiologie selon Klein-Vogelbach et en travail corporel thérapeutique selon Feldenkrais",
+                    "Formation continue en traitement des cicatrices à l'aide de la réflexologie plantaire",
+                    "Plusieurs années d'expérience dans le travail avec des personnes atteints de handicaps physiques et mentaux"
                 ]
             },
             "gilles": {
@@ -72,11 +72,11 @@
                 "role": "Kinésithérapeute",
                 "about": "Parcours professionnel et qualifications",
                 "bullets": [
-                    "Diplôme de kinésithérapeute (« Bachelor of Science ») obtenu à la « staatlich anerkannte, private Hochschule Fresenius » à Cologne (2024)",
-                    "En formation de thérapeute manuel (S.O.M.T.) à la « FIM Münster »",
-                    "Formation continue de thérapeute des fascias",
-                    "Formation continue en kinésithérapie du sport à « EDEN-Reha » à Donaustadt",
-                    "Kinésithérapeute de l’équipe de football FC47 Bastendorf"
+                    "Diplômé en kinésithérapie (« Bachelor of science ») à la « staatlich anerkannten, privaten Hochschule Fresenius » de Cologne en 2024.",
+                    "En formation de thérapie manuelle selon O.M.T. à la « FIM Münster »",
+                    "Formation continue en thérapie des fascias",
+                    "Formation continue en kinésithérapie du sport à l'« EDEN-Reha » à Donaustadt",
+                    "Kinésithérapeute de l'équipe de football FC47 Bastendorf"
                 ]
             }
         }
