--- a/src/locales/lb.json
+++ b/src/locales/lb.json
@@ -30,15 +30,15 @@
                 "role": "Gerant & Physiotherapeut",
                 "about": "Beruffleche Werdegang a Qualifikatiounen",
                 "bullets": [
-                    "Ofschloss als Physiotherapeut, kritt vun der „staatlech unerkannten Lehranstalt für Physiotherapie“ zu Wittlich am Joer 1996",
+                    "Ofschloss als Physiotherapeut, kritt vun der „staatlich anerkannten Lehranstalt für Physiotherapie“ zu Wittlich am Joer 1996",
                     "Komplett Ausbildung zum Fitnesstrainer duerch d’„Inline Unternehmensberatung GmbH“ zu Dorsten",
                     "Fach-Weiterbildung mat Ulehnung un d’Bobath-Konzept 1997 zu Betzdorf",
                     "Ouverture vun der eegener Praxis am Joer 2005",
                     "Manualtherapeut no S.O.M.T. an der „FIM Münster“ am Joer 2000",
                     "Ausbildung zum Faszientherapeut duerch „INOMT“ an der „MFZ Hannover“ 2016",
-                    "Weiderbildung „Medizinesch Trainingstherapie“ 2018 zu Bad Neuenahr",
+                    "Weiderbildung Medizinische Trainingstherapie 2018 zu Bad Neuenahr",
                     "Ausbildung zum CMD-Therapeut am Joer 2020 duerch „FOMT“ an der „MFZ Hannover“",
-                    "Fortbildung „Knorpelrehabilitatioun“ am Joer 2023",
+                    "Fortbildung Knorpelrehabilitation am Joer 2023",
                     "Ausbildung zum Schwindel- a Vestibulartherapeut no „IVRT“ am Joer 2024 zu Koblenz"
                 ]
             },
@@ -60,9 +60,9 @@
                 "role": "Physiotherapeutin",
                 "about": "Beruffleche Werdegang a Qualifikatiounen",
                 "bullets": [
-                    "Ofschloss als Physiotherapeutin, kritt vun der „staatlecher Schoul fir Physiotherapie Grünstadt“ am Joer 1988",
-                    "Ausbildung „manuell Lymphdrainage / komplex Entstauungstherapie“ duerch d’„Lymphologic GmbH Deutschland“",
-                    "Fortbildungen ë. a. an der Bewegungslehre no Klein-Vogelbach souwéi an der therapeutescher Kierperaarbecht no Feldenkrais",
+                    "Ofschloss als Physiotherapeutin, kritt vun der „staatlichen Schule für Physiotherapie Grünstadt“ am Joer 1988",
+                    "Ausbildung „manuelle Lymphdrainage/ komplexe Entstauungstherapie“ duerch d’„Lymphologic GmbH Deutschland“",
+                    "Fortbildungen ënner anerem an der Bewegungslehre no Klein-Vogelbach souwéi an der therapeutescher Kierperaarbecht no Feldenkrais",
                     "Fortbildung „Narbenentstéierung“ mat Hëllef vun der Fussreflexzonentherapie",
                     "Jorelaang Erfarung an der Aarbecht mat Mënsche mat kierperlechen a geeschtegen Aschränkungen"
                 ]
@@ -72,7 +72,7 @@
                 "role": "Physiotherapeut",
                 "about": "Beruffleche Werdegang a Qualifikatiounen",
                 "bullets": [
-                    "Ofschloss als Physiotherapeut („Bachelor of Science“), kritt vun der „staatlech unerkannten, privater Hochschule Fresenius“ zu Köln am Joer 2024",
+                    "Ofschloss als Physiotherapeut („Bachelor of Science“), kritt vun der „staatlich anerkannten, privaten Hochschule Fresenius“ zu Köln am Joer 2024",
                     "An Ausbildung zum Manualtherapeut no S.O.M.T. an der „FIM Münster“",
                     "Fortbildung zum Faszientherapeut",
                     "Fortbildung „Sportphysiotherapie“ an der „EDEN-Reha“ zu Donaustadt",
@@ -90,13 +90,13 @@
                 "title": "Manuell Therapie no S.O.M.T",
                 "description": "D’manuell Therapie ass eng Method, déi sech mat der Diagnostik an der Behandlung vu Funktiounsstéierungen vun de Gelenker, Muskelen an Nerven an hiren pathologesche Folgewierkungen befaasst. Hëlleft bei:",
                 "bullets": [
-                    "Gelenkblockaden an deenen doduerch verursaachte Schmäerzen",
+                    "Gelenkblockaden an der doduerch entstoender Péng",
                     "Aschränkunge vun der Beweglechkeet"
                 ]
             },
             "stosswelle": {
-                "title": "Stousswelltherapie",
-                "description": "D’radial Stousswelltherapie ass eng net-invasiv Method, bei där energie-räich Drockwellen vun baussen op schmerzhafte Kierperstellen geriicht ginn, fir d'Selbstheelungsprozesser unzereegen an Verhärtungen wéi Verkalkungen ze léisen. Hëlleft bei:",
+                "title": "Stousswellentherapie",
+                "description": "D’radial Stousswellentherapie ass eng net-invasiv Method, bei där energieräich Drockwellen vun baussen op schmäerzhaft Kierperplazen geriicht ginn, fir d'Heelungsprozesser unzereegen an Verhäerdungen wéi Verkalkungen ze léisen. Hëlleft bei:",
                 "bullets": [
                     "Fersesporn",
                     "Sehneproblemer wéi Entzündungen a Verkalkungen",
@@ -106,7 +106,7 @@
             },
             "dry-needling": {
                 "title": "Dry Needling",
-                "description": "Dry Needling ass eng speziell physiotherapeutesch Technik, bei där eng dënn, steril Akupunkturnol direkt an verkrampte Muskelberäicher, sougenannte Triggerpunkten, agefouert gëtt. Doduerch ginn d’Verklebunge vun de Faszien geléist an d’Sauerstoffversuergung vun de verspaannten Muskelfaseren verbessert. Hëlleft bei:",
+                "description": "Dry Needling ass eng speziell physiotherapeutesch Technik, bei där eng dënn, steril Akupunkturnol direkt an verkrampft Muskelberäicher, sougenannte Triggerpunkten, agefouert gëtt. Doduerch ginn d’Verpechungen vun de Faszien geléist an d’Sauerstoffversuergung vun de verspaanten Muskelfaseren verbessert. Hëlleft bei:",
                 "bullets": [
                     "Muskelpéng",
                     "Verspaanungen",
@@ -115,35 +115,35 @@
             },
             "faszien": {
                 "title": "Faszien-Therapie",
-                "description": "Faszien-Therapie ass den Iwwerbegrëff fir manuell Techniken, déi d’Bënnegewebe (Faszien) behandelen, fir Verklebungen ze léisen, d’Elastizitéit ze erhéijen, Schmäerzen ze linderen an d’Beweeglechkeet ze verbesseren. Hëlleft bei:",
+                "description": "Faszien-Therapie ass den Iwwerbegrëff fir manuell Techniken, déi d'Bindegewebe (Faszien) behandelen, fir Verklebungen ze léisen, d’Elastizitéit ze erhéijen, Péng ze verréngeren an d’Beweeglechkeet ze verbesseren. Hëlleft bei:",
                 "bullets": [
-                    "chronesche Muskelbeschwéieren",
+                    "chronesche Muskelbeschwéierungen",
                     "Sportverletzungen",
-                    "postoperativen Beschwéieren",
+                    "postoperativen Beschwéierungen",
                     "reduzéierter Gelenkmobilitéit"
                 ]
             },
             "ivrt": {
                 "title": "Schwindeltherapie no IVRT",
-                "description": "Zum vestibuläre System gehéieren Deeler vum bannenzegen Ouer an dem Gehir, déi Informatiounen, déi bei der Gläichgewiichtskontroll an den Aebeweegunge matbedeelegt sinn, veraarbechten. Wann eng Krankheet oder Verletzung dës veraarbechtend Beräicher beaflosst, kann eng vestibulär Stéierung entstoen. Eng Entstoe mat onbekannte Grënn ass och méiglech. Hëlleft bei:",
+                "description": "Zum vestibuläre System gehéieren Deeler vum bannenzegen Ouer an dem Gehier, déi Informatiounen, déi bei der Gläichgewiichtskontroll an den Aebeweegunge matbedeelegt sinn, veraarbechten. Wann eng Krankheet oder Verletzung dës veraarbechtend Beräicher beaflosst, kann eng vestibulär Stéierung entstoen. Eng Entsteeung aus onbekannte Grënn ass och méiglech. Hëlleft bei:",
                 "bullets": [
-                    "Dreischwindel, deen duerch Stéierungen am vestibuläre System ausgeléist gouf",
+                    "Dréischwindel, deen duerch Stéierungen am vestibuläre System ausgeléist gouf",
                     "Problemer mam Gläichgewiicht"
                 ]
             },
             "cmd": {
                 "title": "Kraniomandibulär Dysfunktioun (CMD)",
-                "description": "D’kraniomandibulär Dysfunktioun ass en Sammelbegriff fir schmerzhafte Fehlfunktioune vum Kaukapparat, bei där d’Zesummespill tëscht Kiefergelenk, Kaumuskulatur, Zänn an dacks och der Halswirbelsail gestéiert ass. Dëst kann zu Symptomer wéi Kapp-, Gesiichts- an Oerschmäerzen, Kieferknacken, Tinnitus, Schwindel oder och Réckbeschwéieren féieren a gëtt dacks duerch Stress oder Zännknirschen ausgeléist. Hëlleft bei:",
+                "description": "D’kraniomandibulär Dysfunktioun ass en Sammelbegrëff fir schmäerzhaft Feelfunktioune vum Knaapparat, bei där d’Zesummespill tëscht Kifergelenk, Knamuskulatur, Zänn an dacks och der Halswirbelsail gestéiert ass. Dëst kann zu Symptomer wéi Kapp-, Gesiichts- an Ouerepéng, Kiferknacken, Tinnitus, Schwindel oder och Beschwéierungen am Réck féieren a gëtt dacks duerch Stress oder Zännknirschen ausgeléist. Hëlleft bei:",
                 "bullets": [
-                    "Schmäerzen, déi duerch eng Fehlfunktioun vum Kiefergelenk ausgeléist ginn",
-                    "reduzéierter Beweglechkeet vum Kiefer"
+                    "Péng, déi duerch eng Feelfunktioun vum Kifergelenk ausgeléist ginn",
+                    "reduzéierter Beweglechkeet vum Kifer"
                 ]
             },
             "lymph": {
                 "title": "Manuell Lymphdrainage an komplex Entstauungstherapie",
-                "description": "D’manuell Lymphdrainage ass eng speziell Form vun der medezinescher Massage, déi den Transport vun der Lymphflëssegkeet an de Lymphgefässer duerch sanft Grëfftechniken ureegt. Hëlleft bei:",
+                "description": "D’manuell Lymphdrainage ass eng speziell Form vun der medezinescher Massage, déi den Transport vun der Lymphflëssegkeet an de Lymphgefäässer duerch sanft Grëfftechniken ureegt. Hëlleft bei:",
                 "bullets": [
-                    "primäre Lymphödemer (Fehlanlagen am Lymphgefäss-System)",
+                    "primäre Lymphödemer (Feelanlagen am Lymphgefääss-System)",
                     "sekundäre Lymphödemer (z. B. wéinst operativen Agrëffer, Bestralung, asw.)",
                     "Phlebödemer",
                     "Lipödemer a Lipolymphödemer"
@@ -151,7 +151,7 @@
             },
             "training": {
                 "title": "Medezinesch Trainingstherapie",
-                "description": "Medezinesch Trainingstherapie ass en gezielt, therapeutesch begleetent Opbautraining, dat Kraaft, Ausdauer a Koordinatioun stäerkt, fir no Verletzungen, Operatiounen oder bei chronesche Krankheeten d’kierperlech Leeschtungsfäegkeet fir den Alldag an de Sport erëm hierzestellen oder ze verbesseren. Eis Praxis verfüügt iwwer e gutt equipéierte Trainingsraum, an eist Trainingsprogramm gëtt individuell ugepasst, fir déi jeeweileg Beschwéieren ze verbesseren. Hëlleft bei:",
+                "description": "Medezinesch Trainingstherapie ass en gezielten, therapeutesch begleedenden Opbautraining, den Kraaft, Ausdauer a Koordinatioun stäerkt, fir no Verletzungen, Operatiounen oder bei chronesche Krankheeten d’kierperlech Leeschtungsfäegkeet fir den Alldag an de Sport erëm hierzestellen oder ze verbesseren. Eis Praxis verfüügt iwwer e gutt equipéierte Trainingsraum, an eisen Trainingsprogramm gëtt individuell ugepasst, fir déi jeeweileg Beschwéierungen ze verbesseren. Hëlleft bei:",
                 "bullets": [
                     "Atrophie vun der Muskulatur (Muskelschwund)",
                     "Schwächt vum Häerz-Kreeslaf-System",
@@ -160,7 +160,7 @@
             },
             "physikalisch": {
                 "title": "Physikalesch Therapie",
-                "description": "D’physikalesch Therapie ëmfaasst Behandlungen, déi physikalesch Aflëss wéi Drock, Hëtzt, Keelt oder Elektrizitéit notzen, fir op de Kierper anzewierken. D’Haaptziler vun der physikalescher Therapie sinn d'Schmerzlinderung, d’Fërderung vun der Duerchbluddung an der Stoffwiesselaktivitéit souwéi d’Erhale respektiv d’Verbesserung vun der Beweglechkeet an der Muskelkraaft. Eis Praxis verfüügt iwwer Déifewiermt duerch héichfrequent Elektrotherapie, Ultraschallapparater, Elektrostimulatioun souwéi Déifenoszillatioun. Hëlleft bei:",
+                "description": "D’physikalesch Therapie ëmfaasst Behandlungen, déi physikalesch Aflëss wéi Drock, Hëtzt, Keelt oder Elektrizitéit notzen, fir op de Kierper anzewierken. D’Haaptziler vun der physikalescher Therapie sinn d'Reduzéierung vun Péng, d’Fërderung vun der Duerchbluddung an der Stoffwiesselaktivitéit souwéi d’Erhale respektiv d’Verbesserung vun der Beweeglechkeet an der Muskelkraaft. Eis Praxis verfüügt iwwer Déifewiermt duerch héichfrequent Elektrotherapie, Ultraschallapparater, Elektrostimulatioun souwéi Déifenoszillatioun. Hëlleft bei:",
                 "bullets": [
                     "Sehneproblemer wéi Entzündungen a Verkalkungen",
                     "Verspaanungen"
@@ -174,15 +174,15 @@
         "cta": "Zu de Google-Bewäertungen",
         "items": {
             "1": {
-                "text": "(Iwwersat) Ech sinn zanter ville Joren a Behandlung bei dëser aussergewéinlech kompetenter, frëndlecher an ëmmer hëllefsbereeter Ekipp 😀 Och bei mengem spezielle gesondheetleche Fall gëtt ëmmer no effizienten an op mech zougeschniddene Léisungen a Behandlungsmodeller gesicht. Villmools Merci fir är super Aarbecht😀",
+                "text": "(Iwwersat) Ech sinn zanter ville Joren a Behandlung bei dëser aussergewéinlech kompetenter, frëndlecher an ëmmer hëllefsbereeter Ekipp 😀 Och bei mengem spezielle gesondheetleche Fall gëtt ëmmer no effizienten an op mech ugepasste Léisungen a Behandlungsmodeller gesicht. Villmools Merci fir är super Aarbecht😀",
                 "name": "Sabrina Gloden"
             },
             "2": {
-                "text": "(Iwwersat) Ech ginn zanter 2 Wochen dohinner – a nach fir eng gutt Zäit, fir erëm op d’Been ze kommen. Zwee qualifizéiert Kinéen mat vill Know-how. Grouss a frëndlech Raimlechkeeten, keng Kabinnen, mee eenzel Zëmmeren. D’technesch Apparater si performant an um neiste Stand; eng effizient Uwendung ass dank dem Fachwëssen vun de Kinéen garantéiert.",
+                "text": "(Iwwersat) Ech ginn zanter 2 Wochen dohinner, a nach fir eng gutt Zäit, fir erëm op d’Been ze kommen. Zwee qualifizéiert Kinéen mat vill Know-how. Grouss a frëndlech Raimlechkeeten, keng Kabinnen, mee eenzel Zëmmeren. D’technesch Apparater si performant an um neiste Stand; eng effizient Uwendung ass dank dem Fachwëssen vun de Kinéen garantéiert.",
                 "name": "Marc Wagner"
             },
             "3": {
-                "text": "(Iwwersat) Ech si ganz zefridden! Ingo Pauls a säi Mataarbechter leeschten exzellent Aarbecht – a dat mat vill Witz, Humor a Frëndlechkeet! Ech freeë mech schonn op e Wiedergesinn! Ganz kompetent! 👍👍👍👍👍👍",
+                "text": "(Iwwersat) Ech si ganz zefridden! Den Ingo Pauls a säi Mataarbechter leeschten exzellent Aarbecht, an dat mat vill Witz, Humor a Frëndlechkeet! Ech freeë mech schonn op e Rëmgesinn! Ganz kompetent! 👍👍👍👍👍👍",
                 "name": "Mariette S."
             }
         }
